--- a/index.css
+++ b/index.css
@@ -1605,6 +1605,15 @@ a {
 
 iframe{
     margin: auto 0;
+    padding: 5rem;
     width: 800px;
     height: 500px;
+}
+
+
+#withABorder{
+    border: 1px black solid;
+    border-radius: 12px;
+    padding: 5rem;
+    margin: 0 auto;
 }
