--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3876,10 +3876,9 @@
 
 	#banner {
 		padding: 8em 0 6em 0;
-		background-color: #1E2832;
+		background-color: #4CAF50;
 		color: rgba(255, 255, 255, 0.75);
 		background-attachment: fixed;
-		background-image: url("images/overlay.png"), url("../../images/banner.jpg");
 		background-size: cover;
 		text-align: center;
 	}
