--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4223,5 +4223,13 @@
 			#footer .inner {
 				padding: 2em 0 0.1em 0;
 			}
-
 		}
+
+.toCentrePictures{
+	float: center;
+	max-width: 100%;
+}
+
+.toCentrePictures img{
+	max-width: 100%;
+}
